Fix alignment of buttons

--- a/mitosheet/css/toolbar.css
+++ b/mitosheet/css/toolbar.css
@@ -94,7 +94,6 @@
   max-width: 45px;
   min-width: max-content;
   width: 100%;
-  height: 35px;
 
   margin: 0px 1px;
 
@@ -158,7 +157,7 @@
 
 .mito-toolbar-button-icon-container {
   margin: auto;
-  height: 18px;
+  height: 25px;
   display: flex;
   justify-content: center;
   padding: 5px;
@@ -248,6 +247,10 @@
 
 .mito-toolbar-number-precision {
   display: flex;
+}
+
+.mito-toolbar-number-precision .select-text {
+  font-size: 11px;
 }
 
 .mito-toolbar-container .select-container {
